代码抽离，环境搭建

--- a/sentiment_analysis/1 - Simple Sentiment Analysis.ipynb
+++ b/sentiment_analysis/1 - Simple Sentiment Analysis.ipynb
@@ -50,7 +50,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'data' from 'torchtext.legacy' (E:\\Anaconda3\\lib\\site-packages\\torchtext\\legacy\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mImportError\u001B[0m                               Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-1-8d4d28010adc>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mtorch\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[1;32mfrom\u001B[0m \u001B[0mtorchtext\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mlegacy\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mdata\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0mSEED\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;36m1234\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mImportError\u001B[0m: cannot import name 'data' from 'torchtext.legacy' (E:\\Anaconda3\\lib\\site-packages\\torchtext\\legacy\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torchtext.legacy import data\n",
@@ -76,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,18 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of training examples: 25000\n",
-      "Number of testing examples: 25000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'Number of training examples: {len(train_data)}')\n",
     "print(f'Number of testing examples: {len(test_data)}')"
@@ -120,17 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'text': ['elvira', 'mistress', 'of', 'the', 'dark', 'is', 'one', 'of', 'my', 'fav', 'movies', ',', 'it', 'has', 'every', 'thing', 'you', 'would', 'want', 'in', 'a', 'film', ',', 'like', 'great', 'one', 'liners', ',', 'sexy', 'star', 'and', 'a', 'Outrageous', 'story', '!', 'if', 'you', 'have', 'not', 'seen', 'it', ',', 'you', 'are', 'missing', 'out', 'on', 'one', 'of', 'the', 'greatest', 'films', 'made', '.', 'i', 'ca', \"n't\", 'wait', 'till', 'her', 'new', 'movie', 'comes', 'out', '!'], 'label': 'pos'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(vars(train_data.examples[0]))"
    ]
@@ -148,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,19 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of training examples: 17500\n",
-      "Number of validation examples: 7500\n",
-      "Number of testing examples: 25000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'Number of training examples: {len(train_data)}')\n",
     "print(f'Number of validation examples: {len(valid_data)}')\n",
@@ -206,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,18 +210,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unique tokens in TEXT vocabulary: 25002\n",
-      "Unique tokens in LABEL vocabulary: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Unique tokens in TEXT vocabulary: {len(TEXT.vocab)}\")\n",
     "print(f\"Unique tokens in LABEL vocabulary: {len(LABEL.vocab)}\")"
@@ -257,17 +233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('the', 202789), (',', 192769), ('.', 165632), ('and', 109469), ('a', 109242), ('of', 100791), ('to', 93641), ('is', 76253), ('in', 61374), ('I', 54030), ('it', 53487), ('that', 49111), ('\"', 44657), (\"'s\", 43331), ('this', 42385), ('-', 36979), ('/><br', 35822), ('was', 35035), ('as', 30388), ('with', 29940)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(TEXT.vocab.freqs.most_common(20))"
    ]
@@ -281,17 +249,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['<unk>', '<pad>', 'the', ',', '.', 'and', 'a', 'of', 'to', 'is']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(TEXT.vocab.itos[:10])"
    ]
@@ -305,17 +265,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "defaultdict(<function _default_unk_index at 0x7ff0c24dbf28>, {'neg': 0, 'pos': 1})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(LABEL.vocab.stoi)"
    ]
@@ -333,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,17 +409,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The model has 2,592,105 trainable parameters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def count_parameters(model):\n",
     "    return sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
@@ -493,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,31 +647,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 01 | Epoch Time: 0m 17s\n",
-      "\tTrain Loss: 0.694 | Train Acc: 50.12%\n",
-      "\t Val. Loss: 0.696 |  Val. Acc: 50.17%\n",
-      "Epoch: 02 | Epoch Time: 0m 16s\n",
-      "\tTrain Loss: 0.693 | Train Acc: 49.72%\n",
-      "\t Val. Loss: 0.696 |  Val. Acc: 51.01%\n",
-      "Epoch: 03 | Epoch Time: 0m 16s\n",
-      "\tTrain Loss: 0.693 | Train Acc: 50.22%\n",
-      "\t Val. Loss: 0.696 |  Val. Acc: 50.87%\n",
-      "Epoch: 04 | Epoch Time: 0m 16s\n",
-      "\tTrain Loss: 0.693 | Train Acc: 49.94%\n",
-      "\t Val. Loss: 0.696 |  Val. Acc: 49.91%\n",
-      "Epoch: 05 | Epoch Time: 0m 17s\n",
-      "\tTrain Loss: 0.693 | Train Acc: 50.07%\n",
-      "\t Val. Loss: 0.696 |  Val. Acc: 51.00%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N_EPOCHS = 5\n",
     "\n",
@@ -764,17 +686,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Loss: 0.708 | Test Acc: 47.87%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.load_state_dict(torch.load('tut1-model.pt'))\n",
     "\n",
@@ -818,7 +732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
